# mlet05

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  databricks.yml  docker-compose.yml  dvc.yaml  project_config.yml  pyproject.toml
.github/workflows/: ci.yml
data/golden_set/: finance_qa.jsonl
docs/: LGPD_PLAN.md  MODEL_CARD.md  OWASP_MAPPING.md  RED_TEAM_REPORT.md  SYSTEM_CARD.md
docs/evidence/: API_AND_AGENT.md  DATABRICKS_JOB.md  DATABRICKS_WORKFLOW_RUNS.md  GITHUB_ACTIONS.md  LOCAL_VALIDATION.md  MLFLOW_AND_REGISTRY.md  README.md
evaluation/: ragas_eval.py
scripts/: 02.train_register_fe_model.py  03.deploy_model.py  04.post_commit_status.py  __init__.py  process_data.py
src/finance/: config.py  data_processor.py
src/finance/agent/: __init__.py  rag_pipeline.py  react_agent.py  tools.py
src/finance/models/: __init__.py  basic_model.py
src/finance/monitoring/: __init__.py  drift.py
src/finance/security/: __init__.py  guardrails.py
src/finance/serving/: __init__.py  app.py
tests/: conftest.py  test_agent.py  test_config.py  test_data_processor.py  test_drift.py  test_scripts_config_path.py  test_serving.py
